2006-11-29  Hynek Hanke  <hanke@brailcom.org>

	* src/c/api/libspeechd.c (spd_char): Execute CHAR command
	without mutex!
	(RET): Unlock mutex in RET.
	(spd_events_handler): 

2006-11-17  root  <hanke@brailcom.org>

	* configure.in (LIB_SDAUDIO_AGE): LIB_SPD_REVISION=2

2006-11-17  Hynek Hanke  <hanke@brailcom.org>

	* src/c/api/libspeechd.c (spd_get_client_list): removed.
	: Copyright updated.

	* src/server/parse.c (parse_stop, parse_stop): Added mutexes
	around speaking_stop*() calls.

2006-11-05  Hynek Hanke  <hanke@brailcom.org>

	* src/guile/README: Mailing list correction.

2006-09-28  Hynek Hanke  <hanke@brailcom.org>

	* src/tests/priority_progress.test: New test.

	* src/server/server.c (queue_message): Insert all messages from tha last priority
	progress block into the last_p5_block list.

	* src/server/speaking.c (speak): Handle last priority progress messages as a list
	of messages in a block.

	* src/server/speechd.c (speechd_init): last_p5_message renamed to last_p5_block.

	* src/server/speechd.h: last_p5_message renamed to last_p5_block.

2006-07-25  Hynek Hanke  <hanke@brailcom.org>

	* Makefile: Added distdir: target

	* version.sh: 0.6.1

	* INSTALL: +Orca experimental support.

2006-07-20  Hynek Hanke  <hanke@brailcom.org>

	* config/modules/cicero.conf: Rewritten + comments.

	* src/modules/cicero.c (module_init): Drop CiceroWrapper. Use
	CiceroExecutable.  New option: CiceroExecutableLog
	(module_init): Ignore SIGPIPE in both threads.

2006-07-13  Hynek Hanke  <hanke@brailcom.org>

	* src/python/setup.py: Distutils setup.

	* src/python/Makefile: New file.

	* src/Makefile.am (SUBDIRS): +python

2006-07-11  Hynek Hanke  <hanke@brailcom.org>
	FSF address updated in all files.

2006-07-11  Hynek Hanke  <hanke@brailcom.org>
	
	* src/server/speechd.h: speechd_pid_file removed.

	* src/server/speechd.c (main): If pid_file specified on command
	line, use this one.

	* src/server/options.c (options_parse): Added pid_file.