@@ -1,219 +1,236 @@
-The requirements:
+Installation Instructions
+*************************
+
+Copyright (C) 1994, 1995, 1996, 1999, 2000, 2001, 2002, 2004, 2005 Free
+Software Foundation, Inc.
+
+This file is free documentation; the Free Software Foundation gives
+unlimited permission to copy, distribute and modify it.
+
+Basic Installation
+==================
+
+These are generic installation instructions.
+
+   The `configure' shell script attempts to guess correct values for
+various system-dependent variables used during compilation.  It uses
+those values to create a `Makefile' in each directory of the package.
+It may also create one or more `.h' files containing system-dependent
+definitions.  Finally, it creates a shell script `config.status' that
+you can run in the future to recreate the current configuration, and a
+file `config.log' containing compiler output (useful mainly for
+debugging `configure').
+
+   It can also use an optional file (typically called `config.cache'
+and enabled with `--cache-file=config.cache' or simply `-C') that saves
+the results of its tests to speed up reconfiguring.  (Caching is
+disabled by default to prevent problems with accidental use of stale
+cache files.)
+
+   If you need to do unusual things to compile the package, please try
+to figure out how `configure' could check whether to do them, and mail
+diffs or instructions to the address given in the `README' so they can
+be considered for the next release.  If you are using the cache, and at
+some point `config.cache' contains results you don't want to keep, you
+may remove or edit it.
+
+   The file `configure.ac' (or `configure.in') is used to create
+`configure' by a program called `autoconf'.  You only need
+`configure.ac' if you want to change it or regenerate `configure' using
+a newer version of `autoconf'.
+
+The simplest way to compile this package is:
+
+  1. `cd' to the directory containing the package's source code and type
+     `./configure' to configure the package for your system.  If you're
+     using `csh' on an old version of System V, you might need to type
+     `sh ./configure' instead to prevent `csh' from trying to execute
+     `configure' itself.
+
+     Running `configure' takes awhile.  While running, it prints some
+     messages telling which features it is checking for.
+
+  2. Type `make' to compile the package.
+
+  3. Optionally, type `make check' to run any self-tests that come with
+     the package.
+
+  4. Type `make install' to install the programs and any data files and
+     documentation.
+
+  5. You can remove the program binaries and object files from the
+     source code directory by typing `make clean'.  To also remove the
+     files that `configure' created (so you can compile the package for
+     a different kind of computer), type `make distclean'.  There is
+     also a `make maintainer-clean' target, but that is intended mainly
+     for the package's developers.  If you use it, you may have to get
+     all sorts of other programs in order to regenerate files that came
+     with the distribution.
+
+Compilers and Options
+=====================
+
+Some systems require unusual options for compilation or linking that the
+`configure' script does not know about.  Run `./configure --help' for
+details on some of the pertinent environment variables.
+
+   You can give `configure' initial values for configuration parameters
+by setting variables in the command line or in the environment.  Here
+is an example:
+
+     ./configure CC=c89 CFLAGS=-O2 LIBS=-lposix
+
+   *Note Defining Variables::, for more details.
+
+Compiling For Multiple Architectures
+====================================
+
+You can compile the package for more than one kind of computer at the
+same time, by placing the object files for each architecture in their
+own directory.  To do this, you must use a version of `make' that
+supports the `VPATH' variable, such as GNU `make'.  `cd' to the
+directory where you want the object files and executables to go and run
+the `configure' script.  `configure' automatically checks for the
+source code in the directory that `configure' is in and in `..'.
+
+   If you have to use a `make' that does not support the `VPATH'
+variable, you have to compile the package for one architecture at a
+time in the source code directory.  After you have installed the
+package for one architecture, use `make distclean' before reconfiguring
+for another architecture.
+
+Installation Names
+==================
+
+By default, `make install' installs the package's commands under
+`/usr/local/bin', include files under `/usr/local/include', etc.  You
+can specify an installation prefix other than `/usr/local' by giving
+`configure' the option `--prefix=PREFIX'.
+
+   You can specify separate installation prefixes for
+architecture-specific files and architecture-independent files.  If you
+pass the option `--exec-prefix=PREFIX' to `configure', the package uses
+PREFIX as the prefix for installing programs and libraries.
+Documentation and other data files still use the regular prefix.
+
+   In addition, if you use an unusual directory layout you can give
+options like `--bindir=DIR' to specify different values for particular
+kinds of files.  Run `configure --help' for a list of the directories
+you can set and what kinds of files go in them.
+
+   If the package supports it, you can cause programs to be installed
+with an extra prefix or suffix on their names by giving `configure' the
+option `--program-prefix=PREFIX' or `--program-suffix=SUFFIX'.
+
+Optional Features
 =================
 
-You will need these components to compile Speech Dispatcher:  
- - glib 2.0  (http://www.gtk.org)
- - libdotconf 1.0 (http://www.azzit.de/dotconf/)
- - pthreads
- - gcc and GNU make (http://www.gnu.org)
- - festival-freebsoft-utils 0.3+ (http://www.freebsoft.org/festival-freebsoft-utils)
+Some packages pay attention to `--enable-FEATURE' options to
+`configure', where FEATURE indicates an optional part of the package.
+They may also pay attention to `--with-PACKAGE' options, where PACKAGE
+is something like `gnu-as' or `x' (for the X Window System).  The
+`README' should mention any `--enable-' and `--with-' options that the
+package recognizes.
 
-Only if you are building from CVS, you also need these:
- - automake 1.7+, autoconf, pkg-config and libtool
+   For packages that use the X Window System, `configure' can usually
+find the X include and library files automatically, but if it doesn't,
+you can use the `configure' options `--x-includes=DIR' and
+`--x-libraries=DIR' to specify their locations.
 
-We recommend to also install these packages:
- - Festival (http://www.cstr.ed.ac.uk/projects/festival/)
+Specifying the System Type
+==========================
 
-These Free Software packages are known to work with Speech Dispatcher:
- Software synthesizers:
- - Festival (http://www.cstr.ed.ac.uk/projects/festival/) -- an extensible
-     speech synthesis engine with support for various languages (English,
-     Spanish, Italian, Finnish, Czech, Russian, Hindi, some African languages
-     and others)
- - FLite (http://cmuflite.org/) -- a lightweight software synthesizer for English,
-     we believe it's highly surpassed by Festival, but can be easier to install
-     for the beginning
+There may be some features `configure' cannot figure out automatically,
+but needs to determine by the type of machine the package will run on.
+Usually, assuming the package is built to be run on the _same_
+architectures, `configure' can figure that out, but if it prints a
+message saying it cannot guess the machine type, give it the
+`--build=TYPE' option.  TYPE can either be a short name for the system
+type, such as `sun4', or a canonical name which has the form:
 
- User applications:
- - speechd-el (http://www.freebsoft.org/) -- an Emacs interface for the blind
- - speechd-up (http://www.freebsoft.org/) -- interface to the Speakup screen
-     reader
- - gnome-speech/Gnopernicus interface (http://www.gnome.org/)
- - Orca experimental support
-	(http://www.freebsoft.org/~cerha/orca/speech-dispatcher-backend.html)
- - ...
+     CPU-COMPANY-SYSTEM
 
-Building Speech Dispatcher:
-===========================
+where SYSTEM can have one of these forms:
 
-(for instructions about how to build from CVS or CVS snapshot see bellow)
+     OS KERNEL-OS
 
-If you want to use Speech Dispatcher with Festival (recommended), you
-also need to install festival-freebsoft-utils version 0.3 or higher!
-There is a new key feature -- SSML support -- in Speech Dispatcher and
-the Festival output module *won't* work with the old
-festival-freebsoft-utils. See above for where to get them.
+   See the file `config.sub' for the possible values of each field.  If
+`config.sub' isn't included in this package, then this package doesn't
+need to know the machine type.
 
-To compile the whole project, including Speech Dispatcher server, all modules
-and clients, simply extract the distribution archive and change to 
-speech-dispatcher-<version> directory and run "make all" command as follows:
+   If you are _building_ compiler tools for cross-compiling, you should
+use the option `--target=TYPE' to select the type of system they will
+produce code for.
 
- $ tar -xzvf speech-dispatcher-0.6.1.tar.gz
- $ cd speech-dispatcher-0.6.1
+   If you want to _use_ a cross compiler, that generates code for a
+platform different from the build platform, you should specify the
+"host" platform (i.e., that on which the generated programs will
+eventually be run) with `--host=TYPE'.
 
-Notes about Flite support
-=========================
+Sharing Defaults
+================
 
-You don't need to do anything special to compile Speech Dispatcher
-with Flite support, Flite will be detected automatically when running
-./configure. However, make sure that you have correctly installed
-flite libraries and examine the output of ./configure carefully.
+If you want to set default values for `configure' scripts to share, you
+can create a site shell script called `config.site' that gives default
+values for variables like `CC', `cache_file', and `prefix'.
+`configure' looks for `PREFIX/share/config.site' if it exists, then
+`PREFIX/etc/config.site' if it exists.  Or, you can set the
+`CONFIG_SITE' environment variable to the location of the site script.
+A warning: not all `configure' scripts look for a site script.
 
-You should have configured flite with
-    ./configure --enable-shared
-to be able to use the flite plug-in. If you aren't sure if you have done this,
-check for example for libflite_cmu_us_kal.so in your library directory.
-(It's also possible to use Speech Dispatcher with Flite static libraries,
-but it is generally not a good way unless you know what you are doing.)
+Defining Variables
+==================
 
-Notes about NAS and ALSA support
-================================
+Variables not defined in a site shell script can be set in the
+environment passed to `configure'.  However, some packages may run
+configure again during the build, and the customized values of these
+variables may be lost.  In order to avoid this problem, you should set
+them in the `configure' command line, using `VAR=value'.  For example:
 
-Speech Dispatcher's default audio output system is the Open Sound System,
-e.g. /dev/dsp. But it's also possible to build it with Network Audio System
-and/or Alsa support and then switch between these two audio systems in the
-output module configuration files (e.g. festival.conf). If you have NAS and/or
-Alsa and all the necessary developement libraries installed (audio and Xau for
-NAS, libasound for ALSA)), it will be detected automatically when running
-./configure and Speech Dispatcher will be compiled with NAS and/or ALSA
-support.  Please make sure the libraries are installed correctly. Please
-examine ./configure output for possible problems.
+     ./configure CC=/usr/local2/bin/gcc
 
-We would like to warn you, that the latest version of NAS 1.7 available to us
-has problems in heavy use (fast typing of keys, many messages comming at once).
-Until this is fixed in NAS, we can't recommend you to use this plugin unless
-you know what you are doing.
+causes the specified `gcc' to be used as the C compiler (unless it is
+overridden in the site shell script).  Here is a another example:
 
-We recommend to use ALSA if possible on your system.
+     /bin/bash ./configure CONFIG_SHELL=/bin/bash
 
-Notes about IBM TTS support
-===========================
+Here the `CONFIG_SHELL=/bin/bash' operand causes subsequent
+configuration-related scripts to be executed by `/bin/bash'.
 
-In order to build the propriatary (non-free software) ibmtts output
-module, you will need one of two things:
+`configure' Invocation
+======================
 
-  1.  An install of the proprietary commercial IBM TTS synthesizer (for Linux),
-or
+`configure' recognizes the following options to control how it operates.
 
-  2.  The sdk for IBM TTS, which contains the headers and a "stub library" for
-      linking against. This SDK is Free Software and freely available, however
-      it doesn't contain the synthesizer. It will enable you to build the
-      module, but this module will give you no sound until you install the
-      synthesizer itself.
+`--help'
+`-h'
+     Print a summary of the options to `configure', and exit.
 
-The sdk can be obtained here:
+`--version'
+`-V'
+     Print the version of Autoconf used to generate the `configure'
+     script, and exit.
 
-      http://ibmtts-sdk.sourceforge.net/
+`--cache-file=FILE'
+     Enable the cache: use and save the results of the tests in FILE,
+     traditionally `config.cache'.  FILE defaults to `/dev/null' to
+     disable caching.
 
-      It isn't obvious on that website, but you download the sdk using cvs:
+`--config-cache'
+`-C'
+     Alias for `--cache-file=config.cache'.
 
-      cvs -d:pserver:anonymous@ibmtts-sdk.cvs.sourceforge.net:/cvsroot/ibmtts-sdk login 
+`--quiet'
+`--silent'
+`-q'
+     Do not print messages saying which checks are being made.  To
+     suppress all normal output, redirect it to `/dev/null' (any error
+     messages will still be shown).
 
-      cvs -d:pserver:anonymous@ibmtts-sdk.cvs.sourceforge.net:/cvsroot/ibmtts-sdk co sdk
+`--srcdir=DIR'
+     Look for the package's source code in directory DIR.  Usually
+     `configure' can determine that directory automatically.
 
-      The sdk is licensed using a BSD-style license.
+`configure' also accepts some other, not widely useful, options.  Run
+`configure --help' for more details.
 
-You will also need libsndfile in order to enable sound icon emulation with the
-ibmtts output module.  (As of Apr 2006, the Debian packages you need are
-libsndfile1 and libsndfile1-dev.)
-
-Continue building Speech Dispatcher
-===================================
-
-On some systems, before running make, you have to set the environment variable
-SED to your binary of the sed application. This is usually done as:
-
-$ export SED=sed
-
-$ ./configure
-$ make all
-
-If everything worked ok, you can install all the parts to the default
-path by running (as root):
-
- $ make install
-
-If it doesn't work, please see "Building from CVS" if this is your case. If
-not, you can ask us on users@lists.freebsoft.org or report possible bugs on
-speechd@bugs.freebsoft.org .
-
-Building from CVS
-=================
-
-If you are building directly from CVS or from some CVS tarball snapshot, you
-must first create the ./configure file. Please make sure you have all the
-necessary tools listed in the requirements at the beginning of this README
-in their appropriate versions. Automake and autoconf are especially version
-sensitive.
-
-Then please do:
-
- $ cd speech-dispatcher-0.6.1
- $ ./build.sh
-
-Now the configure file should be created and you can proceed like with
-an ordinary instalation.
-
-Installing Festival Speech Dispatcher interface:
-================================================
-
-You need to install the new version of festival-freebsoft-utils (0.3
-or higher).
-
-Please make sure that Festival server_access_list configuration
-variable and your /etc/hosts.conf are set properly. server_access_list
-must contain the symbolic name of your machine and this name must be
-defined in /etc/hosts.conf and point to your IP address. You can test
-if this is set correctly by trying to connect to the port Festival
-server is running on via an ordinary telnet. If you are not rejected,
-it probably works.
-
-Testing
-=======
-
-You can try to execute Speech Dispatcher by
- $ speech-dispatcher
-
-If Speech Dispatcher is running, you can test if it's working by:
- (on some other console)
- $ cd speech-dispatcher-0.6.1/src/tests
- $ ./run_test basic.test
-(You can also try other tests, if you like.)
-
-Also try
- $ speech-dispatcher --help
-to see how you can run it as a standalone program and possibly see
-what's wrong.
-
-Troubleshooting
-===============
-
-If you think something is missing, try additionally:
-
- $ mkdir PREFIX/etc/speech-dispatcher
- $ cp -r config PREFIX/etc/speech-dispatcher
- $ mkdir PREFIX/include
- $ cp clients/libspeechd.h PREFIX/include/
-
-where PREFIX is your installation path prefix (defaulting to /usr/local).
-
-Building in more detail:
-========================
-
-The hierarchy of Makefiles is used to build each of the parts. The top
-level Makefile allows you to compile some extra parts of the project.
-These are:
-
-    - doc ........ build documentation in all supported formats
-                   (see doc/README for more information)
-    - src/server ..... build speachd server - this is the same as
-                   cd src/server; make all
-    - src/modules .... build all speachd modules - this is the same as
-                   cd src/modules; make all
-    - src/clients .... build all clients - this is the same as
-                   cd src/clients; make all
-    - clean ...... remove all files except the sources (does not
-                   clean documentation)
-    - all ........ build server, modules and clients
-
-    
